plan(71): v2 scope expansion — full Maven→Gradle migration (Phases 1–5)
Trial (Tasks 1–8) passed. Extends plan-71 to the full reactor: root settings +
buildSrc, core/cli compile, codegen parity (xjc/Dagger/Build), dagger shade +
module-info re-injection, 5-platform jlink + SCC launcher, claude/gemini/packaging
assembly, and cutover (delete poms). Tasks 9–17. Phase sequence preserved over
pure risk-sort (hard dependency chain). Branch is now the migration branch, no
longer throwaway.